<resources>
    <string name="app_name">Grocery Companion</string>
    <string name="products_list_size_label">Size:</string>
    <string name="hint_product_name">Name</string>
    <string name="add_product_button">Add</string>
    <string name="hint_product_size">Size</string>
    <string name="hint_product_size_type">Size type</string>
    <string name="hint_supermarket">Supermarket</string>
    <string name="hint_product_price">Price</string>
    <string name="add_button">Add</string>
    <string name="hint_currency">Currency</string>
    <string name="product_detail_price_label">Price:</string>
    <string name="error_add_price">There is already a price for this supermarket</string>
</resources>
